[package]
name = "rust_lib"
version = "0.0.1"
authors = ["User User <user@user.com>"]
description = "First try to link rust and c on cortex"
keywords = ["arm", "cortex-m"]
categories = ["embedded", "no-std"]
license = "MIT"
repository = ""

[lib]
crate-type = ["staticlib"]

[dependencies]
cfg-if = "0.1"

[build-dependencies]
bindgen = "0.33.1"

[profile.release]
lto = true
debug = true